# e2openplugin-OpenWebif

./: Makefile.am  configure.ac
locale/: pl.po
plugin/: Makefile.am  local.py
plugin/backport/: Makefile.am
plugin/controllers/: Makefile.am  base.py
plugin/controllers/models/: Makefile.am  info.py
plugin/controllers/views/: Makefile.am  main.tmpl
plugin/controllers/views/ajax/: Makefile.am
plugin/controllers/views/bouqueteditor/: Makefile.am
plugin/controllers/views/bouqueteditor/web/: Makefile.am
plugin/controllers/views/mobile/: Makefile.am
plugin/controllers/views/web/: Makefile.am
plugin/public/: Makefile.am
plugin/public/css/: Makefile.am
plugin/public/images/: Makefile.am
plugin/public/images/boxes/: Makefile.am
plugin/public/images/mobile/: Makefile.am
plugin/public/images/osd/: Makefile.am
plugin/public/images/remotes/: Makefile.am
plugin/public/js/: Makefile.am
plugin/public/static/: Makefile.am
plugin/public/static/remotes/: Makefile.am
po/: Makefile.am  OpenWebif.pot
